--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:genericSTM32F103T6]
-platform = ststm32
-board = genericSTM32F103T6
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
-
+lib_deps = waspinator/AccelStepper@^1.64
