--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:nanoatmega328]
 platform = atmelavr
-board = uno
+board = nanoatmega328
 framework = arduino
-lib_deps = waspinator/AccelStepper@^1.64
+lib_deps = 
+	waspinator/AccelStepper@^1.64
+	mathertel/OneButton@^2.6.1
+	fmalpartida/LiquidCrystal@^1.5.0
+	forntoh/LcdMenu@^4.0.0
+	Wire
+
